[metadata]
name = glue-openspace
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/glue-viz/glue-openspace
description = Glue OpenSpace plugin
long_description = file: README.rst

[options]
zip_safe = False
python_requires = >=2.7
packages = find:
setup_requires = setuptools_scm
install_requires =
    numpy
    glue-core>=0.15
    qtpy
    astropy
    matplotlib
    websocket-client

[options.package_data]
glue_openspace = *.ui, *.html, *.js, *.png

[options.entry_points]
glue.plugins =
    openspace = glue_openspace:setup

[options.extras_require]
test =
    pytest
qt =
    PyQt5;python_version>="3"
